# CGIL

./: .gitignore  CMakeLists.txt  README.md
cmake/: Download_GCAL.cmake  Find_Boost.cmake  Find_CGAL.cmake
src/: CMakeLists.txt  cgil2.cpp  cgil3.cpp  common.hpp  helper.hpp  make_random_sources.cpp  make_random_targets.cpp  run_test_2.sh  run_test_3.sh
test/: CMakeLists.txt  check_solution.py  solution.py
